# agenterprise

./: .env-template  .gitignore  DEVELOPMENT.md  ENTERPRISE.md  README.md  pip.conf-template  pyproject.toml
.github/agents/: agenterprise-lib.agent.md
.github/workflows/: python-package.yml
agenterprise/: __main__.py
agenterprise/agent_grammer/examples/: agentmicroservice.py
agenterprise/agent_grammer/parser/: ai_environment.g4  ai_environment.interp  ai_environment.tokens  ai_environmentLexer.interp  ai_environmentLexer.py  ai_environmentLexer.tokens  ai_environmentListener.py  ai_environmentParser.py  ai_environmentVisitor.py  ai_llm.g4
agenterprise/model/: generators.py  project.py
agenterprise/model/data/: ai_environment.py
app/: main.py
app/agent_grammer/parser/: README.md  agent.g4  agentenvironment.g4  agentenvironment.interp  agentenvironmentLexer.interp  agentenvironmentLexer.py  agentenvironmentLexer.tokens  agentenvironmentListener.py  agentenvironmentParser.py  ai_agent.g4  ai_llm.g4  (+11 more)
app/datamodel/: agent.py
app/model/: generators.py  project.py
docs/: 404.html
docs/dsl/: index.html
docs/generator/: index.html
documentation/agenterprise-doc/: mkdocs.yml
documentation/docs/: 404.html  index.html  sitemap.xml
dsl-examples/: agentmicroservice-githubtemplates.dsl  agentmicroservice-localtemplates.dsl  agentmicroservice.a4  agentmicroservice.dsl
template-definitions/: agentmicroservice.a4  agentswarm.a4
test/calc-example/: main.py  mylistener.py
test/integration/: test_create_project.py
test/unit/: test_pydantic_generator.py
(+95 files in other folders)
