[project]
name = "Agenterprise"
version = "0.1.0"
description = "Generator for AI Environments"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Michael Vonrueden", email = "mail@agenterprise.ai" }
]
license = { text = "Apache 2.0" }
keywords = ["AI", "agent", "mdsd", "enterprise", "codegen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache 2.0 License",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent"
]
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "antlr4-tools>=0.2.2",
    "cookiecutter>=2.6.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pyproject-parser>=0.13.0",
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://agenterprise.ai"
Repository = "https://github.com/agenterprise/agenterprise"
